--- a/frontend/gramin-health-link/index.html
+++ b/frontend/gramin-health-link/index.html
@@ -18,6 +18,9 @@
     
     <!-- Google Sign-In -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    
+    <!-- Google Translate -->
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </head>
 
   <body>
